Create service account in ArgoCD configs.

--- a/tasks/k8s.yaml
+++ b/tasks/k8s.yaml
@@ -42,7 +42,7 @@ tasks:
     dir: "{{.USER_WORKING_DIR}}"
     cmds:
       - task: helm:update
-      - helm template . >> manifests.yaml
+      - helm template --values values.yaml . > manifests.yaml
 
   # App deployments.
   bootstrap:
