--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,10 +34,10 @@ jobs:
       uses: arduino/setup-task@v1
     - name: Install all dependencies
       run: |
-        task install-ci
+        task go:install-ci
     - name: Run tests.
       run: |
-        task test-ci
+        task go:test-ci
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
       if: always()
