--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,10 @@ jobs:
           ${{ runner.os }}-go-
     - name: Install Task
       uses: arduino/setup-task@v1
+    - name: Set up Docker
+      uses: crazy-max/ghaction-setup-docker@v3
+    - name: Install k3d
+      run: curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | TAG=v5.0.0 bash
     - name: Install all dependencies
       run: |
         task go:install-ci
