--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: Set up Docker
       uses: crazy-max/ghaction-setup-docker@v3
     - name: Install k3d
-      run: curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | TAG=v5.0.0 bash
+      run: curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
     - name: Set up ArgoCD
       run: task k8s:start
     - name: Install all dependencies
