--- a/tasks/argocd.yaml
+++ b/tasks/argocd.yaml
@@ -6,7 +6,7 @@ tasks:
   portforward:
     desc: "Port forward to ArgoCD server"
     cmds:
-      - kubectl port-forward deployment/argocd-server 8080:8080
+      - kubectl port-forward deployment/argocd-server 8080:8080 &
 
   password:
     desc: "Get ArgoCD password"
