--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,11 @@ jobs:
       uses: crazy-max/ghaction-setup-docker@v3
     - name: Install k3d
       run: curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+    - name: Install argocd
+      run: |
+        curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+        sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
+        rm argocd-linux-amd64
     - name: Set up ArgoCD
       run: task k8s:start
     - name: Install all dependencies
