Wait for ingress server too.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,7 @@ jobs:
     - name: Run tests.
       run: |
         kubectl wait --for=condition=Ready pod -l app.kubernetes.io/name=argocd-server
+        kubectl wait --for=condition=Ready pod -l app.kubernetes.io/name=ingress-nginx
         task argocd:token
         task go:test-ci
     - name: Lint code.
