--- a/tasks/go.yaml
+++ b/tasks/go.yaml
@@ -21,6 +21,7 @@ tasks:
       - task: install
       - go install github.com/jstemmer/go-junit-report/v2@latest
       - go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+      - go install github.com/hairyhenderson/gomplate/v4/cmd/gomplate@latest
   
   build:
     desc: Builds binary.
