--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,11 +32,25 @@ jobs:
           ${{ runner.os }}-go-
     - name: Install Task
       uses: arduino/setup-task@v1
+    - name: Set up Docker
+      uses: crazy-max/ghaction-setup-docker@v3
+    - name: Install k3d
+      run: curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+    - name: Install argocd
+      run: |
+        curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+        sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
+        rm argocd-linux-amd64
+    - name: Set up ArgoCD
+      run: task k8s:start
     - name: Install all dependencies
       run: |
         task go:install-ci
     - name: Run tests.
       run: |
+        kubectl wait --for=condition=Ready pod -l app.kubernetes.io/name=argocd-server
+        kubectl wait --for=condition=Ready pod -l app.kubernetes.io/name=ingress-nginx
+        task argocd:token
         task go:test-ci
     - name: Lint code.
       run: |
