Filter on existance SyncWindows (so we can clear them).

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -5,3 +5,10 @@ includes:
   go: ./tasks/go.yaml
   k8s: ./tasks/k8s.yaml
   argocd: ./tasks/argocd.yaml
+
+tasks:
+  default:
+    cmds:
+      - task: go:fmt
+      - task: go:lint
+      - task: go:test
