--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,20 +41,14 @@ jobs:
         curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
         sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
         rm argocd-linux-amd64
-    - name: Set up ArgoCD
-      run: task k8s:start
     - name: Install all dependencies
-      run: |
-        task go:install-ci
-    - name: Run tests.
-      run: |
-        kubectl wait --for=condition=Ready pod -l app.kubernetes.io/name=argocd-server
-        kubectl wait --for=condition=Ready pod -l app.kubernetes.io/name=ingress-nginx
-        task argocd:token
-        task go:test-ci
+      run: task go:install-ci
     - name: Lint code.
-      run: |
-        task go:lint
+      run: task go:lint
+    - name: Start ArgoCD
+      run: task services
+    - name: Run tests.
+      run: task go:test-ci
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
       if: always()
@@ -62,11 +56,10 @@ jobs:
         files: report.xml
     - name: Generate lcov coverage report.
       uses: jandelgado/gcov2lcov-action@v1.0.9
-    - name: Coveralls 
-      uses: coverallsapp/github-action@master
+    - name: Upload results to Codecov
+      uses: codecov/codecov-action@v4
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: coverage.lcov
+        token: ${{ secrets.CODECOV_TOKEN }}
     - name: Save artifacts.
       uses: actions/upload-artifact@v4
       if: always()
