--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -5,7 +5,7 @@ includes:
   go: ./tasks/go.yaml
   k8s: ./tasks/k8s.yaml
   argocd: ./tasks/argocd.yaml
-  octanap: ./tasks/octanap.yaml
+  argonap: ./tasks/argonap.yaml
 
 dotenv: ['.env']
 
