Update to go 1.23.0 and install goreleaser.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -18,6 +18,7 @@ COPY --from=quay.io/argoproj/argocd /usr/local/bin/argocd /usr/local/bin
 RUN go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 RUN go install github.com/jstemmer/go-junit-report/v2@latest
 RUN go install github.com/hairyhenderson/gomplate/v4/cmd/gomplate@latest
+RUN go install github.com/goreleaser/goreleaser/v2@latest
 
 # - Kubernetes
 RUN curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
