--- a/tasks/go.yaml
+++ b/tasks/go.yaml
@@ -37,7 +37,7 @@ tasks:
   lint:
     desc: Lints Golang code.
     cmds:
-      - golangci-lint run
+      - golangci-lint run --timeout 5m
 
   test:
     desc: Run Golang tests.
