Tweak permissions for least-perms and testing.

--- a/kubernetes/argocd/values.yaml
+++ b/kubernetes/argocd/values.yaml
@@ -5,7 +5,11 @@ argo-cd:
     
     rbac:
       policy.csv: |
-        g, automation, role:admin
+        p, role:argonap, projects, create, *, allow
+        p, role:argonap, projects, get, *, allow
+        p, role:argonap, projects, update, *, allow
+        p, role:argonap, projects, delete, *, allow
+        g, automation, role:argonap
 
     params:
       server.insecure: true
