--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -15,6 +15,7 @@ tasks:
       - task: go:fmt
       - task: go:lint
       - task: go:build
+      - task: argocd:clean
       - task: go:test
 
   services:
