--- a/tasks/k8s.yaml
+++ b/tasks/k8s.yaml
@@ -55,12 +55,12 @@ tasks:
     desc: "Bootstrap ArgoCD."
     cmds:
       - helm repo add argocd https://argoproj.github.io/argo-helm
-      - cd kubernetes/argocd; helm dependency build
-      - helm install argocd kubernetes/argocd --namespace default
+      - cd integration/kubernetes/argocd; helm dependency build
+      - helm install argocd integration/kubernetes/argocd --namespace default
 
   bootstrap:ingress-nginx:
     desc: "Bootstrap Ingress"
     cmds:
       - helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-      - cd kubernetes/ingress-nginx; helm dependency build
-      - helm install ingress-nginx kubernetes/ingress-nginx --namespace default
+      - cd integration/kubernetes/ingress-nginx; helm dependency build
+      - helm install ingress-nginx integration/kubernetes/ingress-nginx --namespace default
