--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,14 +38,9 @@ jobs:
     - name: Start ArgoCD
       run: task services
     - name: Run tests.
-      run: task go:test-ci
+      run: task go:test
     - name: Compile code
       run: task go:build
-    - name: Publish Unit Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      if: always()
-      with:
-        files: report.xml
     - name: Generate lcov coverage report.
       uses: jandelgado/gcov2lcov-action@v1.0.9
     - name: Upload results to Codecov
