--- a/tasks/go.yaml
+++ b/tasks/go.yaml
@@ -19,6 +19,7 @@ tasks:
     desc: Install packages and CI/CD tools.
     cmds:
       - task: install
+      - go install github.com/jstemmer/go-junit-report/v2@latest
       - go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
       - go install github.com/hairyhenderson/gomplate/v4/cmd/gomplate@latest
   
