--- a/tasks/go.yaml
+++ b/tasks/go.yaml
@@ -47,5 +47,5 @@ tasks:
   test-ci:
     desc: Run Golang tests and generate coverage report.
     cmds:
-      - go test --coverprofile {{.COVERAGE_RAW}} -v ./... 2>&1  | go-junit-report > report.xml
+      - go test --coverprofile {{.COVERAGE_RAW}} -v ./... 2>&1  | tee >(go-junit-report > report.xml)
       - go tool cover -html={{.COVERAGE_RAW}} -o {{.COVERAGE_REPORT}}
